[package]
name = "middlenet-netrender-bridge"
version = "0.0.1"
edition = "2024"
publish = false

# Standalone workspace — graphshell main's optional Servo dep ships
# its own Stylo (links = "servo_style_crate"); blitz-dom needs a
# different Stylo version. Cargo's `links` invariant only allows one
# such crate per workspace dep graph. By making the bridge its own
# workspace, we resolve Stylo independently here.
#
# Patches mirror the relevant subset of graphshell's root Cargo.toml.
# `[patch]` only takes effect from the root manifest of a workspace,
# so an isolated workspace must replicate the patches it needs.
[workspace]
members = []

[workspace.dependencies]
# iced's vendored copy declares `cryoglyph.workspace = true`, so the
# enclosing workspace (this one, when iced is path-dep'd from here)
# must define the cryoglyph version. Path-dep to graphshell's vendored
# copy keeps it aligned with what graphshell main builds against.
cryoglyph = { path = "../../vendor/cryoglyph" }

[patch.crates-io]
# 2026-05-05: gpu-allocator patch dropped. graphshell main needed it
# for the serval (formerly servo-wgpu) Servo path; the bridge has no
# Servo in its dep graph, so upstream crates.io gpu-allocator is fine.
# Verified by spike build — `cargo build --example smoke_html_paint`
# green without the patch (22.70s, all crates including iced+netrender
# pulling upstream gpu-allocator transitively).

# iced wires cryoglyph from its iced-rs git source by default; redirect
# to graphshell's vendored copy so it picks up the same wgpu-29 fixes.
[patch."https://github.com/iced-rs/cryoglyph.git"]
cryoglyph = { path = "../../vendor/cryoglyph" }

# 2026-05-04 Level-0 first-light spike. Will grow to host the
# `middlenet-render::RenderScene` → `netrender::Scene` adapter once
# the cross-repo seam is proven. For now: a single example binary
# that drives netrender end-to-end from graphshell's tree.

[dependencies]
netrender = { path = "../../../netrender/netrender" }
netrender_text = { path = "../../../netrender/netrender_text" }
middlenet-render = { path = "../middlenet-render" }
wgpu = "29"
png = "0.17"
pollster = "0.4"

# Blitz constituent crates — DOM + HTML parser only. Skipping
# `blitz-paint` (uses anyrender) and `blitz-renderer-vello` per the
# 2026-05-05 architectural call: own the painter so we go straight
# to netrender display lists, no anyrender abstraction layer.
# default-features = false to drop `system_fonts` (not wasm-clean —
# parley/system uses platform font discovery) and `file_input`
# (not needed for our use cases). `accessibility`, `svg`, `woff`
# can come back as opt-ins later.
# `system_fonts` re-enabled (2026-05-05): blitz's layout pipeline measures
# text content even when we don't render glyphs ourselves; without fonts,
# inline content measures to zero and every block collapses to minimum
# height (verified — `root_element().final_layout.size.height = 31` with
# fonts disabled). The wasm-clean path is to supply a `parley::FontContext`
# via `DocumentConfig::font_ctx` instead of letting blitz discover system
# fonts; tracked as follow-up. For now: get the desktop smoke working,
# discipline returns once the html_paint slice is past the debug-box stage.
blitz-dom = { version = "0.3.0-alpha.2", default-features = false }
blitz-html = { version = "0.3.0-alpha.2", default-features = false }
blitz-traits = "0.3.0-alpha.2"
# Stylo, package-renamed to `style` (matches blitz's workspace layout
# at `c:\Users\mark_\Code\repos\blitz\Cargo.toml`). We read
# `ComputedValues` directly to map per-element background-color,
# borders, etc. into netrender Scene primitives.
style = { version = "0.16.0", package = "stylo" }

[dev-dependencies]
middlenet-core = { path = "../middlenet-core" }
iced = { path = "../../vendor/iced", features = ["wgpu", "tokio", "image"] }

[[example]]
name = "smoke_one_rect"
path = "examples/smoke_one_rect.rs"

[[example]]
name = "smoke_parley"
path = "examples/smoke_parley.rs"

[[example]]
name = "smoke_render_scene"
path = "examples/smoke_render_scene.rs"

[[example]]
name = "smoke_iced_image"
path = "examples/smoke_iced_image.rs"

[[example]]
name = "smoke_iced_shader"
path = "examples/smoke_iced_shader.rs"

[[example]]
name = "smoke_html_paint"
path = "examples/smoke_html_paint.rs"
