[package]
name = "register-lens"
version = "0.0.1"
edition = "2024"

[dependencies]
graph-canvas = { path = "../../graph-canvas" }
graphshell-core = { path = "../../graphshell-core" }
petgraph = { version = "0.8.3", features = ["serde-1"] }
serde = { version = "1.0.228", features = ["derive"] }

[lib]
path = "src/lib.rs"
